--- a/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/activity_home_restaurant.xml
@@ -97,7 +97,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save"
+        android:text="EDIT"
         android:id="@+id/button7"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
