--- a/EatSmart/app/src/main/res/layout/activity_restau_choose.xml
+++ b/EatSmart/app/src/main/res/layout/activity_restau_choose.xml
@@ -10,20 +10,11 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="PROFILE"
         android:id="@+id/button9"
-        android:layout_below="@+id/textView22"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="49dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView22"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="94dp" />
+        android:layout_marginTop="32dp" />
 
     <ImageButton
         android:layout_width="120dp"
@@ -32,10 +23,10 @@
         android:src="@drawable/button_ifl"
         android:background="#00ffffff"
         android:scaleType="fitXY"
-        android:layout_marginBottom="74dp"
+        android:layout_marginBottom="72dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toLeftOf="@+id/imageButton4"
+        android:layout_toStartOf="@+id/imageButton4" />
 
     <ImageButton
         android:layout_width="120dp"
@@ -45,8 +36,7 @@
         android:background="#00ffffff"
         android:scaleType="fitXY"
         android:layout_alignTop="@+id/imageButton3"
-        android:layout_toRightOf="@+id/imageButton3"
-        android:layout_toEndOf="@+id/imageButton3" />
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:layout_width="120dp"
@@ -55,7 +45,74 @@
         android:src="@drawable/button_ifl"
         android:background="#00ffffff"
         android:scaleType="fitXY"
-        android:layout_alignTop="@+id/imageButton4"
+        android:layout_above="@+id/textView25"
         android:layout_toRightOf="@+id/imageButton4"
         android:layout_toEndOf="@+id/imageButton4" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CRAVING"
+        android:id="@+id/textView24"
+        android:layout_alignTop="@+id/textView25"
+        android:layout_alignLeft="@+id/imageButton3"
+        android:layout_alignStart="@+id/imageButton3"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="STARVING"
+        android:id="@+id/textView25"
+        android:layout_gravity="center"
+        android:layout_below="@+id/imageButton4"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HUNGRY"
+        android:id="@+id/textView26"
+        android:layout_below="@+id/imageButton5"
+        android:layout_alignLeft="@+id/imageButton5"
+        android:layout_alignStart="@+id/imageButton5"
+        android:layout_marginLeft="35dp"
+        android:layout_marginStart="35dp"
+
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView27"
+        android:layout_above="@+id/textView28"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="29dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CHOOSE A DIFFERENT PACKAGE"
+        android:id="@+id/textView28"
+        android:layout_above="@+id/imageButton4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="21dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="YOUR PACKAGE"
+        android:id="@+id/textView29"
+        android:layout_above="@+id/imageView7"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:id="@+id/imageView7"
+        android:src="@drawable/button_ifl"
+        android:layout_above="@+id/textView27"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
