--- a/EatSmart/app/src/main/res/layout/activity_resto_edit.xml
+++ b/EatSmart/app/src/main/res/layout/activity_resto_edit.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_details_restaurant"
-    tools:context="com.example.jerem.eatsmart.details_restaurant"
-    android:background="#ff0000">
+    tools:context="com.example.jerem.eatsmart.resto_edit"
+    android:background="#da0101">
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton2"
+        android:id="@+id/imageButton7"
         android:src="@drawable/signup_bt"
         android:background="#00ffffff"
         android:maxHeight="120dp"
@@ -23,53 +20,50 @@
         android:minWidth="120dp"
         android:scaleType="fitXY"
         android:adjustViewBounds="true"
-        android:layout_marginBottom="42dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/button6"
-        android:layout_alignStart="@+id/button6" />
+        android:layout_alignRight="@+id/button12"
+        android:layout_alignEnd="@+id/button12" />
 
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:id="@+id/imageView5"
+        android:id="@+id/imageView9"
         android:foreground="#00ffffff"
         android:scaleType="fitXY"
         android:background="#ffffff"
         android:src="@drawable/signin_bg"
         android:nestedScrollingEnabled="false"
         android:longClickable="true"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select Image"
-        android:id="@+id/button6"
-        android:layout_below="@+id/imageView5"
+        android:id="@+id/button12"
+        android:layout_below="@+id/imageView9"
         android:layout_centerHorizontal="true" />
 
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollView2"
-        android:layout_below="@+id/button6"
-        android:layout_alignParentRight="true"
+        android:id="@+id/scrollView3"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/imageButton2">
+        android:layout_below="@+id/button12"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/imageButton7">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent" >
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Description"
-                android:id="@+id/textView16"
+                android:id="@+id/textView22"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal" />
@@ -77,7 +71,7 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText6"
+                android:id="@+id/editText3"
                 android:layout_above="@+id/textView3"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal" />
@@ -86,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Category"
-                android:id="@+id/textView19"
+                android:id="@+id/textView30"
                 android:layout_alignParentBottom="true"
                 android:layout_above="@+id/editText7"
                 android:layout_alignRight="@+id/textView3"
@@ -98,17 +92,17 @@
                 android:layout_height="wrap_content"
                 android:columnCount="3"
                 android:rowCount="3"
-                android:id="@+id/gridLayout2"
+                android:id="@+id/gridLayout"
                 android:layout_above="@+id/editText16"
-                android:layout_alignTop="@+id/textView16"
+                android:layout_alignTop="@+id/textView22"
                 android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal" >
 
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Cafe"
-                    android:id="@+id/radioButton5"
+                    android:id="@+id/radioButton7"
                     android:layout_row="0"
                     android:layout_column="0"
                     android:allowUndo="true"
@@ -120,7 +114,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Dessert"
-                    android:id="@+id/radioButton6"
+                    android:id="@+id/radioButton8"
                     android:layout_row="0"
                     android:layout_column="1"
                     android:allowUndo="true"
@@ -132,7 +126,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/bar"
-                    android:id="@+id/radioButton16"
+                    android:id="@+id/radioButton9"
                     android:layout_row="1"
                     android:layout_column="0"
                     android:allowUndo="true"
@@ -144,7 +138,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Grill"
-                    android:id="@+id/radioButton23"
+                    android:id="@+id/radioButton10"
                     android:layout_row="1"
                     android:layout_column="1"
                     android:textColor="#ffffff"
@@ -158,7 +152,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Fine Dining"
-                    android:id="@+id/radioButton24"
+                    android:id="@+id/radioButton11"
                     android:layout_row="1"
                     android:layout_column="2"
                     android:allowUndo="true"
@@ -170,7 +164,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Veg"
-                    android:id="@+id/radioButton25"
+                    android:id="@+id/radioButton12"
                     android:layout_row="2"
                     android:layout_column="0"
                     android:allowUndo="true"
@@ -182,7 +176,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Buffet"
-                    android:id="@+id/radioButton26"
+                    android:id="@+id/radioButton20"
                     android:layout_row="2"
                     android:layout_column="1"
                     android:allowUndo="true"
@@ -194,7 +188,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Lutong Bahay"
-                    android:id="@+id/radioButton27"
+                    android:id="@+id/radioButton21"
                     android:layout_row="0"
                     android:layout_column="2"
                     android:allowUndo="true"
@@ -206,7 +200,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Fast Food"
-                    android:id="@+id/radioButton28"
+                    android:id="@+id/radioButton22"
                     android:layout_row="2"
                     android:layout_column="2"
                     android:allowUndo="true"
@@ -219,8 +213,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Budget"
-                android:id="@+id/textView20"
-                android:layout_above="@+id/gridLayout2"
+                android:id="@+id/textView31"
+                android:layout_above="@+id/gridLayout"
                 android:layout_alignTop="@+id/imageButton2"
                 android:layout_alignLeft="@+id/imageButton2"
                 android:layout_alignStart="@+id/imageButton2"
@@ -229,14 +223,14 @@
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/radioGroup3"
-                android:layout_above="@+id/textView20"
+                android:id="@+id/radioGroup2"
+                android:layout_above="@+id/textView31"
                 android:layout_alignTop="@+id/imageButton2"
                 android:layout_alignLeft="@+id/imageButton2"
                 android:layout_alignStart="@+id/imageButton2"
-                android:layout_marginTop="31dp"
+                android:layout_marginTop="0dp"
                 android:layout_gravity="center_horizontal"
-                android:clickable="true">
+                android:clickable="true" >
 
                 <GridLayout
                     android:layout_width="match_parent"
@@ -249,7 +243,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="P0-P100"
-                        android:id="@+id/radioButton13"
+                        android:id="@+id/radioButton29"
                         android:layout_row="0"
                         android:layout_column="0"
                         android:allowUndo="true" />
@@ -258,7 +252,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="P101-P500"
-                        android:id="@+id/radioButton14"
+                        android:id="@+id/radioButton30"
                         android:layout_row="0"
                         android:layout_column="1"
                         android:allowUndo="true" />
@@ -267,7 +261,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="P501-P1000"
-                        android:id="@+id/radioButton15"
+                        android:id="@+id/radioButton31"
                         android:layout_row="1"
                         android:layout_column="0"
                         android:allowUndo="true" />
@@ -276,7 +270,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="P1000 above"
-                        android:id="@+id/radioButton17"
+                        android:id="@+id/radioButton32"
                         android:layout_row="1"
                         android:layout_column="1"
                         android:allowUndo="true" />
@@ -287,7 +281,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Location"
-                android:id="@+id/textView21"
+                android:id="@+id/textView32"
                 android:layout_centerVertical="true"
                 android:layout_alignLeft="@+id/textView13"
                 android:layout_alignStart="@+id/textView13"
@@ -296,11 +290,11 @@
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/radioGroup"
+                android:id="@+id/radioGroup4"
                 android:layout_alignParentBottom="true"
                 android:layout_alignRight="@+id/imageView5"
                 android:layout_alignEnd="@+id/imageView5"
-                android:layout_gravity="center_horizontal">
+                android:layout_gravity="center_horizontal" >
 
                 <GridLayout
                     android:layout_width="match_parent"
@@ -313,7 +307,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Manila"
-                        android:id="@+id/radioButton"
+                        android:id="@+id/radioButton33"
                         android:layout_row="0"
                         android:layout_column="1"
                         android:allowUndo="true" />
@@ -322,7 +316,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Pasig"
-                        android:id="@+id/radioButton2"
+                        android:id="@+id/radioButton34"
                         android:layout_row="0"
                         android:layout_column="2"
                         android:allowUndo="true" />
@@ -331,7 +325,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Makati"
-                        android:id="@+id/radioButton3"
+                        android:id="@+id/radioButton35"
                         android:layout_row="0"
                         android:layout_column="3"
                         android:allowUndo="true" />
@@ -340,7 +334,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="San Juan"
-                        android:id="@+id/radioButton4"
+                        android:id="@+id/radioButton36"
                         android:layout_row="1"
                         android:layout_column="1"
                         android:allowUndo="true" />
@@ -349,7 +343,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Pasay"
-                        android:id="@+id/radioButton18"
+                        android:id="@+id/radioButton37"
                         android:layout_row="1"
                         android:layout_column="2"
                         android:allowUndo="true" />
@@ -358,7 +352,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Taguig"
-                        android:id="@+id/radioButton19"
+                        android:id="@+id/radioButton38"
                         android:layout_row="1"
                         android:layout_column="3"
                         android:allowUndo="true" />
@@ -366,5 +360,4 @@
             </RadioGroup>
         </LinearLayout>
     </ScrollView>
-
 </RelativeLayout>
